--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "your-name-here/Stock",
+    "name": "caltj/StockCakeCall",
     "description": "Stock plugin for CakePHP",
     "type": "cakephp-plugin",
     "require": {
